--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "dev": "vite", 
+    "build": "vite build", 
     "preview": "vite preview",
-    "start": "npm run dev"
+    "start": "vite preview --port $PORT" 
   },
   "dependencies": {
     "axios": "^1.7.9",
