--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite", 
-    "build": "vite build", 
-    "preview": "vite preview",
-    "start": "vite preview --port $PORT" 
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "axios": "^1.7.9",
